# researchpy

./: IMPROVEMENTS_SUMMARY.md  README.md  pyproject.toml  test_researchpy.py
researchpy/: __init__.py  basic_stats.py  correlation.py  summary.py  ttest.py  version.py  visualization.py
researchpy.egg-info/: PKG-INFO  requires.txt
