[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchpy"
version = "0.3.6"
authors = [{ name="Corey Bryant", email="CoreyBryant10@gmail.com" }]
maintainers = [{ name="Corey Bryant", email="CoreyBryant10@gmail.com" }]
description = "A comprehensive statistical analysis library for researchers producing publication-ready results with pandas DataFrames."
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = [
    "statistics", "research", "analysis", "t-test", "anova", "correlation", 
    "regression", "data-science", "academic-research", "statistical-testing",
    "effect-size", "pandas", "descriptive-statistics"
]
dependencies = [
    "scipy>=1.7.0",
    "numpy>=1.21.0", 
    "pandas>=1.3.0",
    "statsmodels>=0.12.0",
    "patsy>=0.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
    "mypy"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "numpydoc"
]

[project.urls]
Homepage = "https://researchpy.readthedocs.io/"
Documentation = "https://researchpy.readthedocs.io/"
Repository = "https://github.com/researchpy/researchpy"
"Bug Tracker" = "https://github.com/researchpy/researchpy/issues"
"Source Code" = "https://github.com/researchpy/researchpy"

[tool.setuptools.packages.find]
where = ["."]
include = ["researchpy*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true